src/test/ui/const-generics/defaults/complex-unord-param.min.stderr
error: type parameters must be declared prior to const parameters
  --> $DIR/complex-unord-param.rs:8:41
   |
LL | struct NestedArrays<'a, const N: usize, A: 'a, const M: usize, T:'a =u32> {
   |                    ---------------------^----------------------^--------- help: reorder the parameters: lifetimes, then types, then consts: `<'a, A: 'a, T: 'a = u32, const N: usize, const M: usize>`

error: aborting due to previous error

